--- a/src/app/home/home.page.css
+++ b/src/app/home/home.page.css
@@ -64,8 +64,8 @@ ion-content main nav {
   position: fixed;
   padding: 1.5rem 3rem;
   z-index: 3;
+  backdrop-filter: blur(0.25rem);
   -webkit-backdrop-filter: blur(0.25rem);
-          backdrop-filter: blur(0.25rem);
 }
 ion-content main nav .menu__span {
   font-weight: bold;
@@ -241,8 +241,8 @@ ion-content main section#work .work__container .work__list .work {
   gap: 2rem;
   border-radius: 0.25rem;
   overflow: hidden;
+  backdrop-filter: blur(0.25rem);
   -webkit-backdrop-filter: blur(0.25rem);
-          backdrop-filter: blur(0.25rem);
   transition: 0.1s;
   cursor: pointer;
 }
@@ -395,11 +395,11 @@ ion-content main section#projects .section__body {
 }
 ion-content main section#projects .section__body .project__list {
   display: grid;
-  grid-template-columns: repeat(5, minmax(24rem, 1fr));
+  grid-template-columns: repeat(7, minmax(24rem, 1fr));
   overflow-x: auto;
   align-items: center;
   width: 100%;
-  gap: 2rem;
+  gap: 3rem;
   padding-block: 2.5rem;
   scrollbar-width: none;
   cursor: grab;
@@ -407,20 +407,19 @@ ion-content main section#projects .section__body .project__list {
 ion-content main section#projects .section__body .project__list:active {
   cursor: grabbing;
 }
+ion-content main section#projects .section__body .project__list:has(.project:hover) .project:not(:hover) {
+  opacity: 0.5;
+}
 ion-content main section#projects .section__body .project__list .project {
   flex-direction: column;
   padding: 1rem;
   gap: 1rem;
   border-radius: 0.25rem;
   overflow: hidden;
+  backdrop-filter: blur(0.25rem);
   -webkit-backdrop-filter: blur(0.25rem);
-          backdrop-filter: blur(0.25rem);
   transition: 0.1s;
-  cursor: pointer;
   height: 100%;
-}
-ion-content main section#projects .section__body .project__list .project:has(.project:hover) .project:not(:hover) {
-  opacity: 0.5;
 }
 ion-content main section#projects .section__body .project__list .project:hover {
   background-color: rgba(30, 41, 59, 0.5);
@@ -430,13 +429,61 @@ ion-content main section#projects .section__body .project__list .project:hover {
   --tw-shadow: inset 0 1px 0 0 rgba(148, 163, 184, 0.1);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-ring-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-shadow);
 }
-ion-content main section#projects .section__body .project__list .project:not(:has(.links .link:hover)):hover .preview img {
+ion-content main section#projects .section__body .project__list .project:hover .body .links .link strong span {
+  position: relative;
+  display: inline-block;
+  padding: 0;
+  transform-origin: 50% 0;
+  transform-style: preserve-3d;
+  animation: flip 5s infinite, textclip 5s linear infinite;
+  transition: color 0.3s;
+}
+ion-content main section#projects .section__body .project__list .project:hover .body .links .link strong span:before {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: attr(data-flip);
+  transform: rotateX(-90deg);
+  transform-origin: 50% 0;
+  text-align: left;
+  white-space: nowrap;
+}
+ion-content main section#projects .section__body .project__list .project:has(.skills .skill:hover) .body i {
+  background-size: 200% auto;
+  color: var(--primary-color);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 1s linear infinite;
+  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+}
+ion-content main section#projects .section__body .project__list .project:has(.skills .skill:hover) .body strong span {
+  background-size: 200% auto;
+  color: var(--primary-color);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+}
+ion-content main section#projects .section__body .project__list .project:has(.skills .skill:hover) .body strong span:before {
+  transition: color 0.3s;
+  background-size: 200% auto;
+  color: var(--primary-color);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 4.95s linear infinite;
+  background-image: linear-gradient(-225deg, #fff 0%, #34ffe0 48%, #5eead4 100%);
+}
+ion-content main section#projects .section__body .project__list .project:not(:has(.skills .skill:hover)):hover .preview img {
   display: none;
 }
-ion-content main section#projects .section__body .project__list .project:not(:has(.links .link:hover)):hover .preview iframe {
+ion-content main section#projects .section__body .project__list .project:not(:has(.skills .skill:hover)):hover .preview iframe {
   display: flex;
 }
-ion-content main section#projects .section__body .project__list .project:not(:has(.links .link:hover)):hover .body .details .title a {
+ion-content main section#projects .section__body .project__list .project:not(:has(.skills .skill:hover)):hover .body .details .title a {
   background-size: 200% auto;
   color: var(--primary-color);
   background-clip: text;
@@ -445,12 +492,12 @@ ion-content main section#projects .section__body .project__list .project:not(:ha
   animation: textclip 1s linear infinite;
   background-image: var(--linear-gradient-animate);
 }
-ion-content main section#projects .section__body .project__list .project:not(:has(.links .link:hover)):hover .body .details .title i {
+ion-content main section#projects .section__body .project__list .project:not(:has(.skills .skill:hover)):hover .body .details .title i {
   transform: translate(0, -0.5rem);
   color: var(--tertiary-color);
 }
 ion-content main section#projects .section__body .project__list .project .preview {
-  height: 240px;
+  min-height: 15rem;
   aspect-ratio: 2/1;
 }
 ion-content main section#projects .section__body .project__list .project .preview img,
@@ -468,6 +515,7 @@ ion-content main section#projects .section__body .project__list .project .previe
 ion-content main section#projects .section__body .project__list .project .body {
   flex-direction: column;
   gap: 1rem;
+  justify-content: space-between;
 }
 ion-content main section#projects .section__body .project__list .project .body .details {
   gap: 0.5rem;
@@ -478,6 +526,7 @@ ion-content main section#projects .section__body .project__list .project .body .
   gap: 0.5rem;
   font-size: 1rem;
   color: var(--primary-color);
+  cursor: pointer;
 }
 ion-content main section#projects .section__body .project__list .project .body .details .title a {
   text-decoration: none;
@@ -492,6 +541,7 @@ ion-content main section#projects .section__body .project__list .project .body .
   flex-direction: row;
 }
 ion-content main section#projects .section__body .project__list .project .body .details .description span {
+  min-height: 4lh;
   line-height: 1.5;
   font-size: 0.875rem;
   color: var(--secondary-color);
@@ -503,7 +553,7 @@ ion-content main section#projects .section__body .project__list .project .body .
   flex-direction: row;
   gap: 1rem;
 }
-ion-content main section#projects .section__body .project__list .project .body .links a.link {
+ion-content main section#projects .section__body .project__list .project .body .links .link {
   display: flex;
   flex-direction: row;
   gap: 0.375rem;
@@ -512,18 +562,15 @@ ion-content main section#projects .section__body .project__list .project .body .
   color: var(--primary-color);
   cursor: pointer;
 }
-ion-content main section#projects .section__body .project__list .project .body .links a.link:hover i,
-ion-content main section#projects .section__body .project__list .project .body .links a.link:hover span {
-  color: var(--tertiary-color);
-}
-ion-content main section#projects .section__body .project__list .project .body .links a.link i {
+ion-content main section#projects .section__body .project__list .project .body .links .link i {
+  padding-top: 0.125rem;
   font-size: 0.675rem;
-  margin-top: 0.25rem;
+  color: var(--primary-color);
 }
-ion-content main section#projects .section__body .project__list .project .body .links a.link span {
-  font-weight: 600;
+ion-content main section#projects .section__body .project__list .project .body .links .link span {
   font-size: 0.875rem;
   line-height: 1.25rem;
+  color: var(--primary-color);
 }
 ion-content main section#projects .section__body .project__list .project .body .skills {
   flex-direction: row;
@@ -539,4 +586,11 @@ ion-content main section#projects .section__body .project__list .project .body .
   color: rgb(94, 234, 212);
   background-color: rgba(45, 212, 191, 0.1);
   border-radius: 0.75rem;
+  cursor: pointer;
+}
+ion-content main section#projects .section__body .project__list .project .preview__toggle {
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  font-size: 0.75rem;
 }/*# sourceMappingURL=home.page.css.map */
